# kcm-ufw-debian

./: AUTHORS  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ChangeLog.orig  Makefile  Messages.sh.orig  README  README.md  TODO  cmake_install.cmake  config.h  ecm_uninstall.cmake  kcm_ufw.files  kcm_ufw.includes  kcm_ufw_helper.py
debian/: changelog  control  copyright  lintian-overrides  rules  watch
debian/patches/: fix_about_dialogue.diff  kcm_ufw_spelling_errors.diff  series
helper/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  helper.cpp  helper.cpp.orig  helper.h  helper.h.orig  kcm_ufw_helper  kcm_ufw_helper.py.cmake.orig  moc_helper.cpp  org.kde.ufw.conf  org.kde.ufw.policy  org.kde.ufw.service  ufw.actions.orig
helper/session/: org.kde.ufw.service
kcm/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  appprofiles.cpp  blocker.cpp  blocker.h  cmake_install.cmake  combobox.cpp  combobox.h  kcm.cpp  kcm.cpp.orig  kcm.h  kcm.h.orig  kcm.moc  kcm_ufw_automoc.cpp  lineedit.cpp  lineedit.h  logviewer.cpp  logviewer.h  moc_blocker.cpp  moc_kcm.cpp  moc_logviewer.cpp  moc_ruledialog.cpp  moc_ruleslist.cpp  profile.cpp  profile.h  rule.cpp  rule.cpp.orig  rule.h  rule.h.orig  ruledialog.cpp  ruledialog.cpp.orig  ruledialog.h  ruledialog.moc  ruleslist.cpp  ruleslist.cpp.orig  ruleslist.h  ruleslist.h.orig  rulewidget.ui  (+16 more)
po/: CTestTestfile.cmake  Makefile  cmake_install.cmake  es.gmo  fr.gmo  lt.gmo
